--- a/style.css
+++ b/style.css
@@ -8,10 +8,132 @@ body{
   margin: 0;
   padding: 0;
 }
+/* ---------------------------------- overlay -------------------------------*/
+.zero-opacity{
+  opacity: 0;
+}
+.overlay{
+  z-index: 49;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: white;
+  text-align: center;
+  width: 100vw;
+  height: 100vh;
+  transition: all 0.8s ease-out;
+  -moz-transition: all 0.8s ease-out;
+  -webkit-transition: all 0.8s ease-out;
+  -o-transition: all 0.8s ease-out;
+  -ms-transition: all 0.8s ease-out;
+  cursor: pointer;
+}
+.overlay header{
+  -webkit-transform: translateY(30vh);;
+  transform: translateY(30vh);
+  z-index: 101;
+}
+.overlay header h1{
+  font-size: 7vmin;
+  width: 100vw;
+  text-align: center;
+  animation-fill-mode: forwards;
+  animation-name: title;
+  animation-duration: 4s;
+}
+@keyframes title{
+  0% {
+    opacity: 0.1; 
+    -webkit-transform: translateY(-3vmin);
+    -moz-transform: translateY(-3vmin);
+    -o-transform: translateY(-3vmin);
+    -ms-transform: translateY(-3vmin);
+    transform: translateY(-3vmin);
+  }
+  40% {
+    opacity: 1; 
+    -webkit-transform: translateY(0vmin);
+    -moz-transform: translateY(0vmin);
+    -o-transform: translateY(0vmin);
+    -ms-transform: translateY(0vmin);
+    transform: translateY(0vmin);
+  }
+  100%{
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+}
+.overlay header h6{
+  font-size: 3.5vmin;
+  color: rgb(161, 161, 161);
+  font-weight: 200;
+  width: 100vw;
+  text-align: center;
+  animation-duration: 2s;
+  opacity: 0;
+  animation-fill-mode: forwards;
+  animation-name: description;
+  animation-delay: 0.5s;
+  font-weight: 100;
+}
+@keyframes description{
+  0% {
+    opacity: 0; 
+    -webkit-transform: translateY(2vmin);
+    -moz-transform: translateY(2vmin);
+    -o-transform: translateY(2vmin);
+    -ms-transform: translateY(2vmin);
+    transform: translateY(2vmin);
+  }
+  100% {
+    opacity: 1; 
+    -webkit-transform: translateY(0vmin);
+    -moz-transform: translateY(0vmin);
+    -o-transform: translateY(0vmin);
+    -ms-transform: translateY(0vmin);
+    transform: translateY(0vmin);
+  }
+}
+.overlay p{
+  position: absolute;
+  bottom: 5vh;
+  width: 100vw;
+  text-align: center;
+  font-size: 3vmin;
+  font-weight: 100;
+  color: grey;
+  opacity: 0;
+  animation-name: opa;
+  animation-delay: 2.4s;
+  animation-duration: 1.2s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  z-index: 101;
+}
+@keyframes opa{
+  0%{opacity: .4;}
+  100%{opacity: .7;}
+}
+/* ------------------------canvas------------------------- */
+/* #canvas{
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: white;
+  z-index: 50;
+} */
 /* ---------------------------------- header -------------------------------*/
 header{
   margin-top: 0;
-  padding-top:0;
   position: relative;
 }
 header .reset{
@@ -29,7 +151,8 @@ header .reset{
   line-height: 11vh;
   display: inline-block;
   padding: 0 2vw;
-  font-size: 15px;
+  font-size: 3vmin;
+  font-weight: 200;
 }
 header .reset:hover{
   -moz-transform: scale(1.05);
@@ -42,46 +165,56 @@ header .reset:hover{
 
 header h2{
   margin-top: 0;
-  padding-top:0;
-  height: 10vh;
+  padding-top:1vmin;
+  height: 10vmin;
   color: grey;
   background: rgb(241, 241, 241);
-  line-height: 10vh;
+  line-height: 10vmin;
+  font-size: 4vmin;
 }
 header .score{
-  font-size: 15px;
+  font-size: 3vmin;
   position: absolute;
   right: 25vw;
   line-height: 11vh;
+  font-weight: 200;
+}
+header .score span:first-child{
+  padding: 0 1vmin;
 }
 
 /* ---------------------------------- main body -------------------------------*/
 main{
-  margin: 0 20px 10px 20px;
-  width: 50vw;
+  margin: 0 10vmin 5vmin 10vmin;
+  width: 70vw;
   position: absolute;
   left: 50%;
-  margin-left: -25vw;
+  margin-left: -35vw;
+  height: 100vh;
+  top:15%;
 }
 
 .ques-container{
-  line-height: 30px;
+  line-height: 6vmin;
 }
 .dialog-container{
 }
 .ans-container{
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
 }
+
 .ans{
   display: inline-block;
   flex:1;
-  margin: 30px 40px;
+  margin: 3vmin 5vmin;
   background: white;
   color: rgb(155, 155, 155);
   border-radius: 30px;
-  padding: 1px 10px;
+  padding: 1vmin 2vmin;
   -webkit-box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.2);
   transition: all 250ms ease-in;
@@ -90,7 +223,9 @@ main{
   -o-transition: all 250ms ease-in;
   -ms-transition: all 250ms ease-in;
   cursor: pointer;
+  align-self: center;
 }
+
 .ans:hover{
   background: grey;
   color: white;
@@ -100,18 +235,36 @@ main{
   -ms-transform: translateY(2vh);
   transform: translateY(2vh);
 }
-.ans h5{
-  line-height: 20px;
-}
 .ans-container img{
   width: 60px;
   height: 60px;
 }
-.check{
-  padding: 10px 0;
+/* ------------------------------- finale ------------------------------- */
+.final{
+  height: 26vh;
+  position: relative;
+  width: 70vw;
+}
+.final .check{
+  min-height: 24vh;
+  padding: 2vh 0;
+  width: 70vw;
   border-radius: 30px;
-  -webkit-box-shadow: 2px 2px 5px gba(0, 0, 0, 0.2);
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  margin-top: -12vh;
+  margin-left: -35vw;
+
+}
+.final .check .explain{
+  font-weight: 200;
+  padding: 0 1vw;
+  margin-top: 3vh;
+}
+.final .check  .right-wrong{
+
 }
 
 
