--- a/style.css
+++ b/style.css
@@ -33,11 +33,11 @@ body{
   text-align: center;
   width: 100vw;
   height: 100vh;
-  transition: all 0.8s ease-out;
-  -moz-transition: all 0.8s ease-out;
-  -webkit-transition: all 0.8s ease-out;
-  -o-transition: all 0.8s ease-out;
-  -ms-transition: all 0.8s ease-out;
+  transition: all 1s ease-out;
+  -moz-transition: all 1s ease-out;
+  -webkit-transition: all 1s ease-out;
+  -o-transition: all 1s ease-out;
+  -ms-transition: all 1s ease-out;
   display: none;
   opacity: 0.1;
 }
@@ -61,16 +61,13 @@ body{
 
   /* overflow-y: scroll; */
 }
-/* ::-webkit-scrollbar{
-  background: none;
-  border: none;
-  border-radius: 10px;
+::-webkit-scrollbar{
+  
 }
 ::-webkit-scrollbar-thumb{
   background: grey;
   border-radius: 10px;
-  opacity: .2;
-} */
+}
 .board .name-container{
   height: 10vmin;
   width: 60vmax;
